fixed card text overflow

--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -29,7 +29,6 @@ html, body {
 }
 
 .sidebar {
-  // background: url('../../img/tweed.png') repeat;
   background: #222;
   height: @sidebar-height;
 
@@ -48,45 +47,48 @@ html, body {
 }
 
 .content {
-  // background: url('../../img/furley_bg.png') repeat;
   height: auto;
   .fix-position-sidebar;
 
   .wrapper {
       .pad-bottom(5vh);
   }
-}
-
-.card {
-  border-radius: @border-radius;
-  margin: 5vh auto;
-  // background: @white;
-
-  width: 90vw;
-  height: 60vw;
-  @media (min-width: @laptop-width) {
-    width: 70vw;
-    height: 40vw;
+  .container-fluid {
+    margin:auto; // centers horizontally
+    text-align: center;
+    margin: 5vh auto;
   }
 }
 
+.card {
+  display: inline-block;
+}
+
 .card-thumbnail {
-  padding: 0;
+  height: 60vw;
+  @media (min-width: @laptop-width) {
+    height: 40vw;
+  }
+  .card-width;
+
   border-top-left-radius: @border-radius;
   border-top-right-radius: @border-radius;
-  height: 80%;
+
   overflow: hidden;
   img {
     width: 100%;
   }
   border: 0.5px solid rgba(0, 0, 0, .3);
-  // border-bottom: none;
 }
+
 .card-title {
   border-bottom-left-radius: @border-radius;
   border-bottom-right-radius: @border-radius;
+
   color: rgba(0, 0, 0, .8);
-  height: 20%;
+
+  .card-width;
+  text-align: left;
 
   h2 {
     font-weight: 400;
@@ -94,7 +96,6 @@ html, body {
   h4 {
     font-weight: 300;
   }
-  padding-left: 0;
 }
 
 //blog-post
@@ -146,15 +147,17 @@ html, body {
 
 .post {
   min-height: 100vh;
-  width: 70%;
+  width: 80%;
   p {
-    font-family: @font-family;
-    font-weight: 400;
-    font-size: 1.5em;
-    letter-spacing: 2px;
-    line-height: 2em;
-    // color: rgba(0, 0, 0, 0.8);
-    color: hsla(246, 68%, 26%, 0.8);
+    color: rgba(0, 0, 0, 0.76);
+    // color: hsla(246, 68%, 26%, 0.8);
+    .font-settings(400, 1.2em, 2px, 2em);
+  }
+  @media (min-width: @laptop-width) {
+    p {
+      .font-settings(400, 1.5em, 2px, 2em);
+    }
+    width: 70%;
   }
 }
 
@@ -207,4 +210,19 @@ html, body {
 .border {
   // border: 1px solid #950b5e;
   border: 1px solid rgba(0, 0, 0, .6);
+}
+
+.font-settings(@f-w, @f-s, @l-s, @l-h) {
+  font-family: @font-family;
+  font-weight: @f-w;
+  font-size: @f-s;
+  letter-spacing: @l-s;
+  line-height: @l-h;
+}
+
+.card-width {
+  width: 90vw;
+  @media (min-width: @laptop-width) {
+    width: 70vw;
+  }
 }
